# url-shorterner

./: .dockerignore  .editorconfig  .env.ci  .gitignore  .pre-commit-config.yaml  APPCONTEXT_ENHANCEMENT.md  CHANGELOG.md  CI_STATUS_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.benchmark  Dockerfile.loadgen  Dockerfile.test  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  RUST_VS_PYTHON_BENCHMARK.md  SCALABILITY_SUMMARY.md  SERVICE_OPTIMIZATION_COMPLETE.md  TESTING.md  URL_SERVICE_DOCUMENTATION.md  docker-compose.logging.yml  docker-compose.new.yml  docker-compose.redis-sentinel.yml  docker-compose.rust.yml  docker-compose.test.yml  docker-compose.yml  performance_test.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_tests.sh  test-postgres-init.sql
.github/workflows/: bench.yml  ci-cd.yml  ci-rust.yml  ci.yml
app/: config.py  database.py  dependencies.py  enums.py  kafka.py  main.py  models.py  redis.py  routes.py  schemas.py  service.py  url_service.py  url_service.py.bak2
apps/keygen_app/: main.py  schemas.py
apps/url_shortener/: database.py  dependencies.py  main.py  redis.py  routes.py  schemas.py
benchmark_results/: quick_benchmark.json
common/: models.py  schemas.py
docker/api/: Dockerfile
docker/filebeat/: filebeat.yml
docker/grafana/provisioning/dashboards/: simple-dashboard.json  url-shortener.json
docker/logstash/: logstash.conf
docker/nginx/: nginx-rust.conf  nginx.conf
docker/prometheus/: prometheus.yml
docker/redis/: redis-master.conf  redis-replica.conf  sentinel.conf
docker/rust/: Dockerfile.app  Dockerfile.ingestion  Dockerfile.keygen
docker/traffic-generator/: Dockerfile  docker-compose.yml
docs/: api.md  architecture.md  bench_baselines.json  bench_baselines_ci.json  bench_comparison.md  benchmarks.md  ci-runbook.md  codebase-map.md  coding-standards-rust.md  coding-standards.md  performance-audit.md  roadmap.md  robust-id-allocation.md  scaling-strategy.md  strategies.md
observability/: prometheus.yml
observability/grafana/dashboards/: architecture-flow.json
observability/grafana/dashboards/comparison/: python-vs-rust.json
observability/grafana/dashboards/python/: live-traffic.json  python-stack.json
observability/grafana/dashboards/rust/: rust-stack.json
observability/grafana/provisioning/dashboards/: dashboards.yml
scripts/: bench_compare.py  bench_http.py  bench_regression_check.py  benchmark_python_direct.py  benchmark_simple.py  comprehensive-load-test.py  deploy-robust-id-service.sh  flood_rust.py  high_perf_traffic_generator.py  migrate-to-redis-sentinel.sh  monitor-id-service.py  monitor_ci.py  setup-hooks.sh  simple-traffic.py  test_python_perf.py  traffic-generator.py
services/app-rs/: Cargo.toml
services/app-rs/src/: cache.rs  config.rs  enums.rs  handlers.rs  kafka.rs  keygen.rs  main.rs  metrics.rs  models.rs  state.rs
services/cache_warmer/: worker.py
services/cache_warmer_py/: worker.py
services/cache_warming/: cache_warming_service.py  worker.py
services/config/: config_service.py
services/id_allocator/: id_allocator_service.py
services/ingestion/: ingestion_service.py  worker.py
services/ingestion-rs/: Cargo.toml
services/ingestion-rs/src/: main.rs
services/ingestion_py/: worker.py
services/keygen-rs/: Cargo.toml
services/keygen-rs/src/: main.rs
services/keygen_py/: main.py
services/redis/: redis_sentinel_service.py
services/rust/app-rs/src/: config.rs  db.rs  enums.rs  handlers.rs  models.rs
services/rust/ingestion-rs/src/: main.rs
services/rust/keygen-rs/src/: main.rs
services/rust/traffic-generator-rs/: Cargo.toml  Dockerfile
services/traffic-generator-rs/: Cargo.toml  Dockerfile
services/traffic-generator-rs/src/: main.rs
services/url_shortening/: url_shortening_service.py
stress/: locustfile.py  locustfile_50k.py  locustfile_orchestrator.py
tests/: conftest.py  load_test.py  quick_benchmark.py  regression_test.py  test_health.py  test_redirect.py  test_runner.py  test_service.py  test_shorten.py  test_stats.py  test_url_service.py
