[workspace]
members = [
    "services/app-rs",
    "services/keygen-rs",
    "services/ingestion-rs",
    "services/traffic-generator-rs",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }

# Config / env
dotenvy = "0.15"
envy = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
rand = "0.8"
base62 = "2"
reqwest = { version = "0.12", features = ["json"] }
