[package]
name = "keygen-rs"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "keygen-rs"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
