[package]
name = "traffic-generator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.20", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
log = "0.4"
env_logger = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
rand = "0.8"

# Configuration
clap = { version = "3.1", features = ["derive"] }
